Alterando Gustavo Godoi (GuGodoi07)

--- a/about.html
+++ b/about.html
@@ -20,20 +20,14 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
-                atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
-                similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
+            <p class="apresentacao__conteudo__texto">Olá, sou o Gustavo Godoi da Silva, tenho 18 anos, 
+            atualmente estudo Análise e Desenvolvimento de Sistema na FIAP, 
+            
             </p>
             <p class="apresentacao__conteudo__texto">
-                Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
-                eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas
-                assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum
-                necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum
-                rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut
-                perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat
-                cupidatat non.</p>
+                Um dos meus maiores objetivos de carreira é trabalhar em empresas grandes como Google, Amazon,  Facebook entre outras. A tecnologia foi algo que sempre gostei, mas quando era criança nunca imaginei seguir essa carreira meu sonho era e é até hoje é conseguir passar em um concurso da PRF "Policia Rodoviária Federal" na minha família tem muitas que seguem essa militar e isso acabou se tornando algo interessante ao longo do tempo. Quem me incentivou a entrar nessa área de ti foi minha mãe, um dia nós estávamos conversando sobre oque eu iria cursar e ela começou a me contar de alguns pessoas conhecidas que trabalha nessa área, fui pesquisar alguns cursos de início me entecerei por big data, mas entrando a fundo vi o curso de análise e Desenvolvimento de Sistema um curso que em globa varias áreas desde front-end, back-end até IA e chat bot e data base foi ai que resolvi começar esse curso e me profissionalizar na área de ti.</p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto da Joana Santos programando">
+        <img class="imagem_gu" src="./assets/GuGodoi.jpg" alt="Foto de Gustavo Godoi">
     </main>
 
     <footer class="rodape">
